# tflite-custom-operator

./: .gitignore  CMakeLists.txt  README.md  grid_sample.cc
examples/: dll_inference.py  dll_inference_cli.py  test_dll.ipynb
src/: grid_sample.h
